# nanologmod

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
docs/: CONTRIBUTING.md  EXAMPLE_USAGE.md  logging-guide.md
libnanologgermod/: CMakeLists.txt  logger.cppm  stopwatch.cppm
libnanologmod/: CMakeLists.txt  logger.cpp  logger.cppm  stopwatch.cpp  stopwatch.cppm
tests/: CMakeLists.txt
tests/libnanologgermod/: logger_test.cpp  stopwatch_test.cpp
tests/libnanologmod/: logger_test.cpp  stopwatch_test.cpp
