cmake_minimum_required(VERSION 3.28)
project(nanologgermod CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_CXX_SCAN_FOR_MODULES ON)

enable_testing()

add_subdirectory(external/Catch2)
add_subdirectory(libnanologgermod)
add_subdirectory(tests)
